--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
     <main class="main-section">
         <div class="container">
             <div class="img-container">
-                <img src="/images/person.png" alt="">
+                <img src="images/person.png" alt="">
             </div>
             <div class="dateils-container">
                 <h2 class="title">My failures of previous yea</h2>
                 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
                 <ul>
-                    <li><img src="./images/icons/done.png" alt="" class="img-icon"> Contrary to popular belief, is not simply.</li>
-                    <li><img src="./images/icons/done.png" alt=""class="img-icon">Contrary to popular belief.</li>
+                    <li><img src="images/icons/done.png" alt="" class="img-icon"> Contrary to popular belief, is not simply.</li>
+                    <li><img src="images/icons/done.png" alt=""class="img-icon">Contrary to popular belief.</li>
                    
-                    <li><img src="./images/icons/done.png" alt=""class="img-icon">Contrary to popular , is not simply</li>
-                    <li><img src="./images/icons/done.png" alt=""class="img-icon">Contrary to popular belief, is not simply.</li>
+                    <li><img src="images/icons/done.png" alt=""class="img-icon">Contrary to popular , is not simply</li>
+                    <li><img src="images/icons/done.png" alt=""class="img-icon">Contrary to popular belief, is not simply.</li>
                 </ul>
             </div>
         </div>
