--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- about section -->
     <!-- footer -->
     <footer class="footer">
-        <div class="container">
+        <div class="footer-container">
             <div class="footer-right">
                 <h3 class="footer-title">Future</h3>
                 <p class="footer-discription">There are many variations of passages of Lorem Ipsum <br>
