--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
     </section>
     <!-- service section -->
     <!-- about section -->
-    
+    <section class="about-section">
+        <div class="about-container">
+            <h2 class="titles">Awlays keep a positive <br> mindset</h2>
+            <button class="button">call Now</button>
+
+        </div>
+    </section>
     <!-- about section -->
     <!-- footer -->
     <footer class="footer">
@@ -109,7 +115,7 @@
                     <input class="emails" type="email" name="" id="" placeholder="Enter your EmailS">
                     
                 </div>
-                <button class="btn">Subscribe</button>
+                <button class="btn btn">Subscribe</button>
             </div>
         </div>
 
